add a wrapper script and gclog analysis script