@@ -1,7 +1,11 @@
-JAVA_PATH=/export/apps/jdk/JDK-1_8_0_5/bin
-$JAVA_PATH/javac Test.java
+#!/bin/bash
+javac Test.java
+
+H=$1
+shift
+
+GCLOG=$1
+shift
 
 #10g heap is suggested
-$JAVA_PATH/java -Xmx$1 -Xms$1 -Xloggc:gc.log -XX:+UseG1GC -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps Test
-
-
+java -Xmx$H -Xms$H -Xloggc:$GCLOG -XX:+UseG1GC -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDetails $* Test
